--- a/portfolio.html
+++ b/portfolio.html
@@ -1,128 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-
-<body>
-
-    <!--Hat-->
-
-    <header>
-        <a href="./index.html" class="logo header"><span class="accent">Web</span>Studio</a>
-
-        <nav>
-            <!--Pages-->
-            <ul class="page list">
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html" class="current">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
-            </ul>
-
-        </nav>
-
-        <!--Contacts-->
-        <ul class="contacts list">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <header class="header">
+      <a href="./index.html" class="header-logo link"
+        ><span class="header accent">Web</span>Studio</a
+      >
+      <nav class="nav">
+        <ul class="nav-list list">
+          <li class="nav-list-item">
+            <a href="./index.html" class="nav-link link">Студия</a>
+          </li>
+          <li class="nav-list-item">
+            <a href="./portfolio.html" class="nav-link link current">Портфолио</a>
+          </li>
+          <li class="nav-list-item"><a href="" class="nav-link link">Контакты</a></li>
         </ul>
+      </nav>
+
+      <ul class="header-contacts list">
+        <li class="contacts-list-item">
+          <a href="mailto:info@devstudio.com" class="header-contacts-mail link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="contacts-list-item">
+          <a href="tel:+380961111111" class="header-contacts-tel link"
+            >+38 096 111 11 11</a
+          >
+        </li>
+      </ul>
     </header>
-    <main>
-        <!-- Filter -->
-        <section>
-            <h1 class="hidden">Filter</h1>
-        <ul class="filter">
-            <li><button type="button" class="button">Всё</button></li>
-            <li><button type="button" class="button">Веб-сайты</button></li>
-            <li><button type="button" class="button">Приложения</button></li>
-            <li><button type="button" class="button">Дизайн</button></li>
-            <li><button type="button" class="button">Маркетинг</button></li>
-        </ul>
-        <ul class="list">
-            <li>
-                <a href="">
-                    <img src="./img/1.jpg" alt="Веб-сайт">
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./img/2.jpg" alt="Дизайн">
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./img/3.jpg" alt="Приложение">
-                    <h2>Ресторан Seafood</h2>
-                    <p>Приложение</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./img/4.jpg" alt="Маркетинг">
-                    <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./img/5.jpg" alt="Приложение">
-                    <h2>Проект Boxes</h2>
-                    <p>Приложение</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./img/6.jpg" alt="Веб-сайт">
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./img/7.jpg" alt="Дизайн">
-                    <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./img/8.jpg" alt="Маркетинг">
-                    <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <img src="./img/9.jpg" alt="Приложение">
-                    <h2>Growing Business</h2>
-                    <p>Приложение</p>
-                </a>
-            </li>
-        </ul>
-        </section>
 
-    </main>
-    <!--Footer-->
-    <footer class="footer">
-        <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
-        <ul class="contacts list">
-            <li>
-                <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-            </li>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+    <main>
+            <section class="main">
+                <h1 class="main-hidden-title">Filter</h1>
+            <ul class="main-list list">
+                <li><button class="main-button" type="button">Всё</button></li>
+                <li><button class="main-button" type="button">Веб-сайты</button></li>
+                <li><button class="main-button" type="button">Приложения</button></li>
+                <li><button class="main-button" type="button">Дизайн</button></li>
+                <li><button class="main-button" type="button">Маркетинг</button></li>
+            </ul>
+            <ul class="main-list list">
+                <li>
+                    <a href="" class="main-link link">
+                        <img src="./img/1.jpg" alt="Веб-сайт">
+                        <h2 class="item-title">Технокряк</h2>
+                        <p class="item-text">Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="main-link link">
+                        <img src="./img/2.jpg" alt="Дизайн">
+                        <h2 class="item-title">Постер New Orlean vs Golden Star</h2>
+                        <p class="item-text">Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="main-link link">
+                        <img src="./img/3.jpg" alt="Приложение">
+                        <h2 class="item-title">Ресторан Seafood</h2>
+                        <p class="item-text">Приложение</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="main-link link">
+                        <img src="./img/4.jpg" alt="Маркетинг">
+                        <h2 class="item-title">Проект Prime</h2>
+                        <p class="item-text">Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="main-link link">
+                        <img src="./img/5.jpg" alt="Приложение">
+                        <h2 class="item-title">Проект Boxes</h2>
+                        <p class="item-text">Приложение</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="main-link link">
+                        <img src="./img/6.jpg" alt="Веб-сайт">
+                        <h2 class="item-title">Inspiration has no Borders</h2>
+                        <p class="item-text">Веб-сайт</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="main-link link">
+                        <img src="./img/7.jpg" alt="Дизайн">
+                        <h2 class="item-title">Издание Limited Edition</h2>
+                        <p class="item-text">Дизайн</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="main-link link">
+                        <img src="./img/8.jpg" alt="Маркетинг">
+                        <h2 class="item-title">Проект LAB</h2>
+                        <p class="item-text">Маркетинг</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="main-link link">
+                        <img src="./img/9.jpg" alt="Приложение">
+                        <h2 class="item-title">Growing Business</h2>
+                        <p class="item-text">Приложение</p>
+                    </a>
+                </li>
+            </ul>
+            </section>
     
+    </main>
+
+    <footer class="footer">
+      <a href="./index.html" class="footer-logo link"
+        ><span class="footer accent">Web</span>Studio</a
+      >
+      <ul class="footer-list list">
+        <li>
+          <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+        </li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="footer-contacts link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="footer-contacts link"
+            >+38 096 111 11 11</a
+          >
+        </li>
+      </ul>
     </footer>
+  </body>
+</html>
