--- a/portfolio.html
+++ b/portfolio.html
@@ -9,138 +9,164 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header class="header">
-      <a href="./index.html" class="header-logo link"
-        ><span class="header accent">Web</span>Studio</a
-      >
-      <nav class="nav">
-        <ul class="nav-list list">
-          <li class="nav-list-item">
-            <a href="./index.html" class="nav-link link">Студия</a>
-          </li>
-          <li class="nav-list-item">
-            <a href="./portfolio.html" class="nav-link link current">Портфолио</a>
-          </li>
-          <li class="nav-list-item"><a href="" class="nav-link link">Контакты</a></li>
-        </ul>
-      </nav>
+      <div class="header-container">
+        <a class="header-logo link" href="./index.html"
+          ><span class="header-accent">Web</span>Studio</a
+        >
+        <nav class="nav">
+          <ul class="nav-list list">
+            <li class="nav-list-item">
+              <a class="nav-link link" href="./index.html">Студия</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-link link current" href="./portfolio.html"
+                >Портфолио</a
+              >
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-link link" href="">Контакты</a>
+            </li>
+          </ul>
+        </nav>
 
-      <ul class="header-contacts list">
-        <li class="contacts-list-item">
-          <a href="mailto:info@devstudio.com" class="header-contacts-mail link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="contacts-list-item">
-          <a href="tel:+380961111111" class="header-contacts-tel link"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+        <ul class="header-contacts list">
+          <li class="contacts-list-item">
+            <a
+              class="header-contacts-mail link"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts-list-item">
+            <a class="header-contacts-tel link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
 
     <main>
-            <section class="main">
-                <h1 class="main-hidden-title">Filter</h1>
-            <ul class="main-list list">
-                <li><button class="main-button" type="button">Всё</button></li>
-                <li><button class="main-button" type="button">Веб-сайты</button></li>
-                <li><button class="main-button" type="button">Приложения</button></li>
-                <li><button class="main-button" type="button">Дизайн</button></li>
-                <li><button class="main-button" type="button">Маркетинг</button></li>
-            </ul>
-            <ul class="main-list list">
-                <li>
-                    <a href="" class="main-link link">
-                        <img src="./img/1.jpg" alt="Веб-сайт">
-                        <h2 class="item-title">Технокряк</h2>
-                        <p class="item-text">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="main-link link">
-                        <img src="./img/2.jpg" alt="Дизайн">
-                        <h2 class="item-title">Постер New Orlean vs Golden Star</h2>
-                        <p class="item-text">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="main-link link">
-                        <img src="./img/3.jpg" alt="Приложение">
-                        <h2 class="item-title">Ресторан Seafood</h2>
-                        <p class="item-text">Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="main-link link">
-                        <img src="./img/4.jpg" alt="Маркетинг">
-                        <h2 class="item-title">Проект Prime</h2>
-                        <p class="item-text">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="main-link link">
-                        <img src="./img/5.jpg" alt="Приложение">
-                        <h2 class="item-title">Проект Boxes</h2>
-                        <p class="item-text">Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="main-link link">
-                        <img src="./img/6.jpg" alt="Веб-сайт">
-                        <h2 class="item-title">Inspiration has no Borders</h2>
-                        <p class="item-text">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="main-link link">
-                        <img src="./img/7.jpg" alt="Дизайн">
-                        <h2 class="item-title">Издание Limited Edition</h2>
-                        <p class="item-text">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="main-link link">
-                        <img src="./img/8.jpg" alt="Маркетинг">
-                        <h2 class="item-title">Проект LAB</h2>
-                        <p class="item-text">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="main-link link">
-                        <img src="./img/9.jpg" alt="Приложение">
-                        <h2 class="item-title">Growing Business</h2>
-                        <p class="item-text">Приложение</p>
-                    </a>
-                </li>
-            </ul>
-            </section>
-    
+      <section class="main section">
+        <div class="main-filter">
+          <h1 class="main-hidden-title">Filter</h1>
+          <ul class="main-list-filter list">
+            <li class="main-list-item">
+              <button class="main-button" type="button">Всё</button>
+            </li>
+            <li class="main-list-item">
+              <button class="main-button" type="button">Веб-сайты</button>
+            </li>
+            <li class="main-list-item">
+              <button class="main-button" type="button">Приложения</button>
+            </li>
+            <li class="main-list-item">
+              <button class="main-button" type="button">Дизайн</button>
+            </li>
+            <li class="main-list-item">
+              <button class="main-button" type="button">Маркетинг</button>
+            </li>
+          </ul>
+        </div>
+        <div class="main-filter-items">
+        <ul class="main-list list">
+          <li class="main-link-item">
+            <a class="main-link link" href="">
+              <img src="./img/1.jpg" alt="Веб-сайт" />
+              <h2 class="item-title">Технокряк</h2>
+              <p class="item-text">Веб-сайт</p>
+            </a>
+          </li>
+          <li class="main-link-item">
+            <a class="main-link link" href="">
+              <img src="./img/2.jpg" alt="Дизайн" />
+              <h2 class="item-title">Постер New Orlean vs Golden Star</h2>
+              <p class="item-text">Дизайн</p>
+            </a>
+          </li>
+          <li class="main-link-item">
+            <a class="main-link link" href="">
+              <img src="./img/3.jpg" alt="Приложение" />
+              <h2 class="item-title">Ресторан Seafood</h2>
+              <p class="item-text">Приложение</p>
+            </a>
+          </li>
+          <li class="main-link-item">
+            <a class="main-link link" href="">
+              <img src="./img/4.jpg" alt="Маркетинг" />
+              <h2 class="item-title">Проект Prime</h2>
+              <p class="item-text">Маркетинг</p>
+            </a>
+          </li>
+          <li class="main-link-item">
+            <a class="main-link link" href="">
+              <img src="./img/5.jpg" alt="Приложение" />
+              <h2 class="item-title">Проект Boxes</h2>
+              <p class="item-text">Приложение</p>
+            </a>
+          </li>
+          <li class="main-link-item">
+            <a class="main-link link" href="">
+              <img src="./img/6.jpg" alt="Веб-сайт" />
+              <h2 class="item-title">Inspiration has no Borders</h2>
+              <p class="item-text">Веб-сайт</p>
+            </a>
+          </li>
+          <li class="main-link-item">
+            <a class="main-link link" href="">
+              <img src="./img/7.jpg" alt="Дизайн" />
+              <h2 class="item-title">Издание Limited Edition</h2>
+              <p class="item-text">Дизайн</p>
+            </a>
+          </li>
+          <li class="main-link-item">
+            <a class="main-link link" href="">
+              <img src="./img/8.jpg" alt="Маркетинг" />
+              <h2 class="item-title">Проект LAB</h2>
+              <p class="item-text">Маркетинг</p>
+            </a>
+          </li>
+          <li class="main-link-item">
+            <a class="main-link link" href="">
+              <img src="./img/9.jpg" alt="Приложение" />
+              <h2 class="item-title">Growing Business</h2>
+              <p class="item-text">Приложение</p>
+            </a>
+          </li>
+        </ul>
+        </div>
+      </section>
     </main>
 
-    <footer class="footer">
-      <a href="./index.html" class="footer-logo link"
-        ><span class="footer accent">Web</span>Studio</a
-      >
-      <ul class="footer-list list">
-        <li>
-          <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-        </li>
-        <li>
-          <a href="mailto:info@devstudio.com" class="footer-contacts link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="footer-contacts link"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+    <footer class="footer-bg">
+      <div class="footer">
+        <a class="footer-logo link" href="./index.html"
+          ><span class="footer-accent">Web</span>Studio</a
+        >
+        <ul class="footer-list list">
+          <li>
+            <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+          </li>
+          <li>
+            <a class="footer-contacts link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="footer-contacts link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
