--- a/index.html
+++ b/index.html
@@ -17,44 +17,50 @@
   </head>
   <body>
     <header class="header">
-      <a href="./index.html" class="header-logo link"
-        ><span class="header-accent">Web</span>Studio</a
-      >
-      <nav class="nav">
-        <ul class="nav-list list">
-          <li class="nav-list-item">
-            <a href="./index.html" class="nav-link link current">Студия</a>
-          </li>
-          <li class="nav-list-item">
-            <a href="./portfolio.html" class="nav-link link">Портфолио</a>
-          </li>
-          <li class="nav-list-item">
-            <a href="" class="nav-link link">Контакты</a>
-          </li>
-        </ul>
-      </nav>
+      <div class="header-container">
+        <a class="header-logo link" href="./index.html"
+          ><span class="header-accent">Web</span>Studio</a
+        >
+          <nav class="nav">
+            <ul class="nav-list list">
+              <li class="nav-list-item">
+                <a class="nav-link link current" href="./index.html">Студия</a>
+              </li>
+              <li class="nav-list-item">
+                <a class="nav-link link" href="./portfolio.html">Портфолио</a>
+              </li>
+              <li class="nav-list-item">
+                <a class="nav-link link" href="">Контакты</a>
+              </li>
+            </ul>
+          </nav>
 
-      <ul class="header-contacts list">
-        <li class="contacts-list-item">
-          <a href="mailto:info@devstudio.com" class="header-contacts-mail link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="contacts-list-item">
-          <a href="tel:+380961111111" class="header-contacts-tel link"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+          <ul class="header-contacts list">
+            <li class="contacts-list-item">
+              <a
+                class="header-contacts-mail link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-list-item">
+              <a class="header-contacts-tel link" href="tel:+380961111111" 
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+      </div>
     </header>
     <main>
-      <section class="banner">
-        <h1 class="banner-title">Эффективные решения для вашего бизнеса</h1>
+      <section class="banner-bg">
+        <div class="banner">
+          <h1 class="banner-title">Эффективные решения для вашего бизнеса</h1>
 
-        <button class="banner-button" type="button">Заказать услугу</button>
+          <button class="banner-button" type="button">Заказать услугу</button>
+        </div>
       </section>
 
-      <section class="features">
+      <section class="features section">
         <ul class="features-list list">
           <li class="features-list-item">
             <h3 class="features-title">Внимание к деталям</h3>
@@ -87,18 +93,22 @@
         </ul>
       </section>
 
-      <section class="task">
+      <section class="task section">
         <h2 class="task-title">Чем мы занимаемся</h2>
         <ul class="task-list list">
           <li class="task-list-item">
             <img src="./img/img1.jpg" alt="make up in pages" width="370" />
           </li>
-          <li class="task-list-item"><img src="./img/img2.jpg" alt="design" width="370" /></li>
-          <li class="task-list-item"><img src="./img/img3.jpg" alt="testing" width="370" /></li>
+          <li class="task-list-item">
+            <img src="./img/img2.jpg" alt="design" width="370" />
+          </li>
+          <li class="task-list-item">
+            <img src="./img/img3.jpg" alt="testing" width="370" />
+          </li>
         </ul>
       </section>
 
-      <section class="team">
+      <section class="team section">
         <h2 class="team-title">Наша команда</h2>
         <ul class="team-list list">
           <li class="team-list-item">
@@ -125,25 +135,27 @@
       </section>
     </main>
 
-    <footer class="footer">
-      <a href="./index.html" class="footer-logo link"
-        ><span class="footer-accent">Web</span>Studio</a
-      >
-      <ul class="footer-list list">
-        <li>
-          <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
-        </li>
-        <li>
-          <a href="mailto:info@devstudio.com" class="footer-contacts link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="footer-contacts link"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+    <footer class="footer-bg">
+      <div class="footer">
+        <a class="footer-logo link" href="./index.html" 
+          ><span class="footer-accent">Web</span>Studio</a
+        >
+        <ul class="footer-list list">
+          <li>
+            <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
+          </li>
+          <li>
+            <a class="footer-contacts link" href="mailto:info@devstudio.com" 
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="footer-contacts link" href="tel:+380961111111" 
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
