--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </header>
     <main>
       <section class="banner-bg">
-        <div class="banner">
+        <div class="container">
           <h1 class="banner-title">Эффективные решения для вашего бизнеса</h1>
 
           <button class="banner-button" type="button">Заказать услугу</button>
@@ -61,6 +61,7 @@
       </section>
 
       <section class="features section">
+        <div class="container">
         <ul class="features-list list">
           <li class="features-list-item">
             <h3 class="features-title">Внимание к деталям</h3>
@@ -91,9 +92,11 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
 
       <section class="task section">
+        <div class="container">
         <h2 class="task-title">Чем мы занимаемся</h2>
         <ul class="task-list list">
           <li class="task-list-item">
@@ -106,9 +109,11 @@
             <img src="./img/img3.jpg" alt="testing" width="370" />
           </li>
         </ul>
+      </div>
       </section>
 
       <section class="team section">
+        <div class="container">
         <h2 class="team-title">Наша команда</h2>
         <ul class="team-list list">
           <li class="team-list-item">
@@ -132,24 +137,25 @@
             <p class="team-text">UI Designer</p>
           </li>
         </ul>
+      </div>
       </section>
     </main>
 
     <footer class="footer-bg">
-      <div class="footer">
+      <div class="container">
         <a class="footer-logo link" href="./index.html" 
           ><span class="footer-accent">Web</span>Studio</a
         >
         <ul class="footer-list list">
-          <li>
+          <li class="footer-list-item">
             <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
           </li>
-          <li>
+          <li class="footer-list-item">
             <a class="footer-contacts link" href="mailto:info@devstudio.com" 
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="footer-list-item">
             <a class="footer-contacts link" href="tel:+380961111111" 
               >+38 096 111 11 11</a
             >
