--- a/portfolio.html
+++ b/portfolio.html
@@ -21,42 +21,40 @@
         <a class="header-logo link" href="./index.html"
           ><span class="header-accent">Web</span>Studio</a
         >
-        <nav class="nav">
-          <ul class="nav-list list">
-            <li class="nav-list-item">
-              <a class="nav-link link" href="./index.html">Студия</a>
-            </li>
-            <li class="nav-list-item">
-              <a class="nav-link link current" href="./portfolio.html"
-                >Портфолио</a
+          <nav class="nav">
+            <ul class="nav-list list">
+              <li class="nav-list-item">
+                <a class="nav-link link current" href="./index.html">Студия</a>
+              </li>
+              <li class="nav-list-item">
+                <a class="nav-link link" href="./portfolio.html">Портфолио</a>
+              </li>
+              <li class="nav-list-item">
+                <a class="nav-link link" href="">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+
+          <ul class="header-contacts list">
+            <li class="contacts-list-item">
+              <a
+                class="header-contacts-mail link"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
               >
             </li>
-            <li class="nav-list-item">
-              <a class="nav-link link" href="">Контакты</a>
+            <li class="contacts-list-item">
+              <a class="header-contacts-tel link" href="tel:+380961111111" 
+                >+38 096 111 11 11</a
+              >
             </li>
           </ul>
-        </nav>
-
-        <ul class="header-contacts list">
-          <li class="contacts-list-item">
-            <a
-              class="header-contacts-mail link"
-              href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-list-item">
-            <a class="header-contacts-tel link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
       </div>
     </header>
 
     <main>
       <section class="main section">
-        <div class="main-filter">
+        <div class="container">
           <h1 class="main-hidden-title">Filter</h1>
           <ul class="main-list-filter list">
             <li class="main-list-item">
@@ -75,70 +73,86 @@
               <button class="main-button" type="button">Маркетинг</button>
             </li>
           </ul>
-        </div>
-        <div class="main-filter-items">
         <ul class="main-list list">
           <li class="main-link-item">
             <a class="main-link link" href="">
               <img src="./img/1.jpg" alt="Веб-сайт" />
+              <div class="list-item-desc">
               <h2 class="item-title">Технокряк</h2>
               <p class="item-text">Веб-сайт</p>
+            </div>
             </a>
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
               <img src="./img/2.jpg" alt="Дизайн" />
+              <div class="list-item-desc">
               <h2 class="item-title">Постер New Orlean vs Golden Star</h2>
               <p class="item-text">Дизайн</p>
+              </div>
             </a>
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
               <img src="./img/3.jpg" alt="Приложение" />
+              <div class="list-item-desc">
               <h2 class="item-title">Ресторан Seafood</h2>
               <p class="item-text">Приложение</p>
+              </div>
             </a>
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
               <img src="./img/4.jpg" alt="Маркетинг" />
+              <div class="list-item-desc">
               <h2 class="item-title">Проект Prime</h2>
               <p class="item-text">Маркетинг</p>
+              </div>
             </a>
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
               <img src="./img/5.jpg" alt="Приложение" />
+              <div class="list-item-desc">
               <h2 class="item-title">Проект Boxes</h2>
               <p class="item-text">Приложение</p>
+              </div>
             </a>
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
               <img src="./img/6.jpg" alt="Веб-сайт" />
+              <div class="list-item-desc">
               <h2 class="item-title">Inspiration has no Borders</h2>
               <p class="item-text">Веб-сайт</p>
+              </div>
             </a>
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
               <img src="./img/7.jpg" alt="Дизайн" />
+              <div class="list-item-desc">
               <h2 class="item-title">Издание Limited Edition</h2>
               <p class="item-text">Дизайн</p>
+              </div>
             </a>
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
               <img src="./img/8.jpg" alt="Маркетинг" />
+              <div class="list-item-desc">
               <h2 class="item-title">Проект LAB</h2>
               <p class="item-text">Маркетинг</p>
+              </div>
             </a>
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
               <img src="./img/9.jpg" alt="Приложение" />
+              <div class="list-item-desc">
               <h2 class="item-title">Growing Business</h2>
               <p class="item-text">Приложение</p>
+              </div>
             </a>
           </li>
         </ul>
@@ -147,26 +161,25 @@
     </main>
 
     <footer class="footer-bg">
-      <div class="footer">
-        <a class="footer-logo link" href="./index.html"
+      <div class="container">
+        <a class="footer-logo link" href="./index.html" 
           ><span class="footer-accent">Web</span>Studio</a
         >
         <ul class="footer-list list">
-          <li>
+          <li class="footer-list-item">
             <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
           </li>
-          <li>
-            <a class="footer-contacts link" href="mailto:info@devstudio.com"
+          <li class="footer-list-item">
+            <a class="footer-contacts link" href="mailto:info@devstudio.com" 
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a class="footer-contacts link" href="tel:+380961111111"
+          <li class="footer-list-item">
+            <a class="footer-contacts link" href="tel:+380961111111" 
               >+38 096 111 11 11</a
             >
           </li>
         </ul>
       </div>
-    </footer>
   </body>
 </html>
