Подправил секцию команды и добавил рамки в портфолио

--- a/index.html
+++ b/index.html
@@ -118,23 +118,31 @@
         <ul class="team-list list">
           <li class="team-list-item">
             <img src="./img/igor.jpg" alt="man" width="270" />
+            <div class="team-description">
             <h3 class="team-name">Игорь Демьяненко</h3>
             <p class="team-text">Product Designer</p>
+          </div>
           </li>
           <li class="team-list-item">
             <img src="./img/olga.jpg" alt="woman" width="270" />
+            <div class="team-description">
             <h3 class="team-name">Ольга Репина</h3>
             <p class="team-text">Frontend Developer</p>
+          </div>
           </li>
           <li class="team-list-item">
             <img src="./img/nikolai.jpg" alt="man" width="270" />
+            <div class="team-description">
             <h3 class="team-name">Николай Тарасов</h3>
             <p class="team-text">Marketing</p>
+          </div>
           </li>
           <li class="team-list-item">
             <img src="./img/mikhail.jpg" alt="man" width="270" />
+            <div class="team-description">
             <h3 class="team-name">Михаил Ермаков</h3>
             <p class="team-text">UI Designer</p>
+          </div>
           </li>
         </ul>
       </div>
