--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
         <ul class="main-list list">
           <li class="main-link-item">
             <a class="main-link link" href="">
-              <img src="./img/1.jpg" alt="Веб-сайт" />
+              <img src="./img/1.png" alt="Веб-сайт" />
               <div class="list-item-desc">
               <h2 class="item-title">Технокряк</h2>
               <p class="item-text">Веб-сайт</p>
@@ -85,7 +85,7 @@
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
-              <img src="./img/2.jpg" alt="Дизайн" />
+              <img src="./img/2.png" alt="Дизайн" />
               <div class="list-item-desc">
               <h2 class="item-title">Постер New Orlean vs Golden Star</h2>
               <p class="item-text">Дизайн</p>
@@ -94,7 +94,7 @@
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
-              <img src="./img/3.jpg" alt="Приложение" />
+              <img src="./img/3.png" alt="Приложение" />
               <div class="list-item-desc">
               <h2 class="item-title">Ресторан Seafood</h2>
               <p class="item-text">Приложение</p>
@@ -103,7 +103,7 @@
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
-              <img src="./img/4.jpg" alt="Маркетинг" />
+              <img src="./img/4.png" alt="Маркетинг" />
               <div class="list-item-desc">
               <h2 class="item-title">Проект Prime</h2>
               <p class="item-text">Маркетинг</p>
@@ -112,7 +112,7 @@
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
-              <img src="./img/5.jpg" alt="Приложение" />
+              <img src="./img/5.png" alt="Приложение" />
               <div class="list-item-desc">
               <h2 class="item-title">Проект Boxes</h2>
               <p class="item-text">Приложение</p>
@@ -121,7 +121,7 @@
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
-              <img src="./img/6.jpg" alt="Веб-сайт" />
+              <img src="./img/6.png" alt="Веб-сайт" />
               <div class="list-item-desc">
               <h2 class="item-title">Inspiration has no Borders</h2>
               <p class="item-text">Веб-сайт</p>
@@ -130,7 +130,7 @@
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
-              <img src="./img/7.jpg" alt="Дизайн" />
+              <img src="./img/7.png" alt="Дизайн" />
               <div class="list-item-desc">
               <h2 class="item-title">Издание Limited Edition</h2>
               <p class="item-text">Дизайн</p>
@@ -139,7 +139,7 @@
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
-              <img src="./img/8.jpg" alt="Маркетинг" />
+              <img src="./img/8.png" alt="Маркетинг" />
               <div class="list-item-desc">
               <h2 class="item-title">Проект LAB</h2>
               <p class="item-text">Маркетинг</p>
@@ -148,7 +148,7 @@
           </li>
           <li class="main-link-item">
             <a class="main-link link" href="">
-              <img src="./img/9.jpg" alt="Приложение" />
+              <img src="./img/9.png" alt="Приложение" />
               <div class="list-item-desc">
               <h2 class="item-title">Growing Business</h2>
               <p class="item-text">Приложение</p>
